--- a/_posts/2017-09-09-zabi.md
+++ b/_posts/2017-09-09-zabi.md
@@ -19,4 +19,20 @@ mathjax: true
 ### Python
 
 1. pthon中的元类理解:<br/>
-python新式类中的默认元类是object，所有类以元类为模板创建，调用元类中的new方法和自身类中的init方法。
+python新式类中的默认元类是object，所有类以元类为模板创建，调用元类中的new方法和自身类中的init方法。<br/>
+元累与继承的区别：类的元类必须是父类的元类的非严格子类。
+
+2. Python3中默认编码方式是utf-8；Unicode码是一套包含各种语言的字符集，而utf-8是它的一种具体实现方式。
+
+### 机器学习数学基础
+
+1. 假设检验：一般假设样本服从独立同分布，且为正态分布，实际中很多问题近似为正态分布，假设检验一般在此分布上进行；同样的
+对于非正态分布，其假设检验的判断标准时不同的，可以参考陈希孺的<<概率论与数理统计>>。
+
+### 机器学习
+
+1. 分类问题中的类别不平衡：若训练样例中，有998个正例，2个反例，如何训练？基本策略-再缩放
+
+
+
+
