--- a/_posts/2017-10-05-sigmod.md
+++ b/_posts/2017-10-05-sigmod.md
@@ -25,16 +25,25 @@ $$
 
 ## 广义线性模型
 
+普通线性模型:$y=\mathrm w^T \mathrm x$
+
+广义线性：$f(y)=\mathrm w^T \mathrm x$,$f(y)$称为连接函数
+
 满足以下假设：
 
-* $ h(x) = E(y\|x) $
+* $ P(y ;Phi) \sim exponential(y;\eta) $
+* $h_\theta (\mathrm x) = E(T(\mathrm y)\|\eta)$
 * $\eta = \theta \cdot x$
 
 包括高斯分布，伯努利分布等很多分布都满足指数分布族的表达。
 
-## 理解
+## 逻辑回归和高斯判别
 
-我的理解是其实广义线性模型是总结出来便于形式上的归纳，是对各种概率模型的一种解释。
+Logistic Regression只假设$P(y\| \mathrm ,\Phi)$在$\mathrm x$已知的情况下服从参数为$\Phi$的二项分布，而高斯判别假设$P(\mathrm x \|  y)$服从高斯分布。
+
+若$P(\mathrm x \| y)$服从高斯分布，可推出$P( y \| \mathrm x)$的概率表达式是logistic函数，但反之未必，也有可能$P(\mathrm x \| y)$服从
+泊松分布，二项分布等，所以逻辑回归有很好的鲁棒性。
+
 
 ## Sigmod函数形式
 
