--- a/_posts/2018-05-13-catboost.md
+++ b/_posts/2018-05-13-catboost.md
@@ -20,7 +20,7 @@ catboost是俄罗斯最大搜索引擎Yandex开源，可以处理类别特征，
 最原始的想法如下式所示，然后论文指出了不足，并提出两个准则，一个是样本概率分布和总体概率分布一致，一个是方差应该尽量小，并提出了
 Ordered TBS。
 
-<div align="center"><img src="/photoes/2018/catboost.PNG" /></div>
+<div align="center"><img src="/photoes/2018/catboost.png" /></div>
 
 ## 分布偏差
 
@@ -30,6 +30,7 @@ Ordered TBS。
 
 ## 树的实现
 
-在learing to rank树的基础上做改进，可以看它的参考文献，不可以处理缺失值，需要人为对缺失值进行填充。
+在oblivious tree的基础上做改进，可以看它的参考文献，不可以处理缺失值，需要人为对缺失值进行填充。Oblivious tree是完全二叉树，每层分裂点
+使用同一个feature，同一个threshold，优化目标是最小化方差。
 
 
